--- a/compilecfg/jdcloud_ax6000_immwrt.ini
+++ b/compilecfg/jdcloud_ax6000_immwrt.ini
@@ -1,3 +1,3 @@
-REPO_URL=https://github.com/immortalwrt/immortalwrt.git
+REPO_URL=https://github.com/inlolo/immortalwrt.git
 REPO_BRANCH=master
 BUILD_DIR=immortalwrt
